--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>iot-portal-vue</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><title>iot-portal-vue</title><meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no"><link href=/static/css/app.8e9059f8c95d5447c939d8a40438d23c.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.16876197456b8b22d1a3.js></script><script type=text/javascript src=/static/js/vendor.db9476b125f5d3cfdd43.js></script><script type=text/javascript src=/static/js/app.532654e3ff54ac2a2e2f.js></script></body></html>
